<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".UserRegistration">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/name"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/txt_name"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_add_new_user" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/txt_city"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_add_new_user" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingStart="10dp"
        android:text="@string/select_type"
        android:textSize="@dimen/text_size_add_new_user"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:layout_editor_absoluteX="20dp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:paddingStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:selectionRequired="true"
        app:singleSelection="true"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_user"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/user"
            android:textSize="@dimen/text_size_add_new_pr" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_consumer"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumer"
            android:textSize="@dimen/text_size_add_new_pr" />

    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_no"
        app:layout_constraintTop_toBottomOf="@+id/chip_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_mobile"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_add_new_user" />
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

<!--        <Button-->
<!--            android:id="@+id/btn_cancel"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_alignParentStart="true"-->
<!--            android:background="@drawable/ic_cancel" />-->

        <Button
            android:id="@+id/btn_save"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_done"
            tools:layout_editor_absoluteX="76dp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>