<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".AddNewProduct">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/add_new_product"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:autofillHints=""
        android:textSize="@dimen/text_size_add_new_pr"
        android:hint="@string/enter_garbage_type"
        android:id="@+id/txtGarbageType"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/enter_stock_size"
        android:textSize="@dimen/text_size_add_new_pr"
        android:id="@+id/txtStockSize"
        app:layout_constraintTop_toBottomOf="@+id/txtGarbageType" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/text_size_add_new_pr"
        android:hint="@string/enter_price"
        android:autofillHints=""
        android:id="@+id/txtProductPrice"
        app:layout_constraintTop_toBottomOf="@+id/txtStockSize" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_location"
        android:textSize="@dimen/text_size_add_new_pr"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtProductPrice" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapfragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_cancel" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_done"
            tools:layout_editor_absoluteX="76dp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>